[package]
name = "mpdhaj"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { version = "1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
etcetera = "0.11"
futures = "0.3"
futures-concurrency = "7.6"
itertools = "0.14"
jiff = { version = "0.2", features = ["serde"] }
lofty = "0.22"
moosicbox_audiotags = "0.1"
notify-debouncer-full = "0.6"
pretty_assertions = "1.4"
rodio = { git = "https://www.github.com/RustAudio/rodio" }
rusqlite = {version = "0.37", features = ["bundled"] } # TODO: use tokio-rusqlite
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.48", features = ["rt", "fs", "macros", "net", "io-std", "io-util", "sync"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
